# Creditra-Contracts

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TASK_3_CHECKLIST.md  TASK_3_COMPLETION_SUMMARY.md  default_16054732070822085968_0_43008.profraw
contracts/credit/src/: accrual.rs  borrow.rs  collateral.rs  config.rs  events.rs  lib.rs  lifecycle.rs  math_utils.rs  risk.rs  risk_formula_tests.rs  storage.rs  types.rs
contracts/credit/tests/: accrual_overflow_audit.rs  collateral.rs  coverage_edge_cases.rs  credit_auction_e2e.rs  default_liquidation_auction_hook.rs  default_liquidation_settled_event.rs  enumerate_credit_lines.rs  freeze_draws.rs  installment_advance_prop.rs  monotonic_timestamps.rs  oracle_deviation.rs  penalty_surcharge.rs  restricted_status.rs  state_transition_invariants.rs  token_failure_rollback.rs  total_utilized_invariant.rs  unauthorized_matrix.rs
docs/: PROTOCOL_SPEC.md  credit.md  state-machine.md
gateway-contract/contracts/auction_contract/: ANTI_SNIPE_IMPLEMENTATION.md  ANTI_SNIPE_QUICK_REFERENCE.md  ANTI_SNIPE_VISUAL_GUIDE.md
gateway-contract/contracts/auction_contract/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
scripts/: check_workspace.sh  clean_profraw.sh
